<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="exo_controls_fastforward_description">Fast forward</string>
    <string name="exo_controls_next_description">Next track</string>
    <string name="exo_controls_pause_description">Pause</string>
    <string name="exo_controls_play_description">Play</string>
    <string name="exo_controls_previous_description">Previous track</string>
    <string name="exo_controls_rewind_description">Rewind</string>
    <string name="exo_controls_stop_description">Stop</string>
    <string name="s1">Save image</string>
    <string name="s2">Allow Ad to store image in Picture gallery?</string>
    <string name="s3">Accept</string>
    <string name="s4">Decline</string>
    <string name="s5">Create calendar event</string>
    <string name="s6">Allow Ad to create a calendar event?</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="about_dev">Developed by Lyrebird Studio</string>
    <string name="about_emoji">Emoji Graphics by Twemoji</string>
    <string name="about_title">About</string>
    <string name="about_version">Version :</string>
    <string name="acne">Acne Removal</string>
    <string name="appirate__utils_remind_me">Later!</string>
    <string name="appirate_utils_message_before_appname">Do you want to support %s, would you mind taking a moment to rate it?</string>
    <string name="appirate_utils_no">No!</string>
    <string name="auto">Auto Retouch</string>
    <string name="auto2">Auto</string>
    <string name="back_button_save_message">Would you like to save session?</string>
    <string name="base">Base</string>
    <string name="beautifyFace">Beautifying face...</string>
    <string name="beauty_pan">Pan and zoom the image with your fingers.</string>
    <string name="beauty_remove_acne">Tap to remove acne!</string>
    <string name="blush">Blush</string>
    <string name="bright">Brighten</string>
    <string name="brush_size">Brush Size :</string>
    <string name="buy_button">Buy app</string>
    <string name="buy_me_message">Buy full version to get redo feature and much more effects and also more adjustment options, in addition to all of these you will get Magnify Glass View which would make super easier to paint to small areas.</string>
    <string name="buy_more_features">Buy Color Splash Pro for more features!</string>
    <string name="cancelled">Cancelled!</string>
    <string name="canvas_text_enter_text">Please enter text</string>
    <string name="canvas_text_hint">Enter Text Here</string>
    <string name="changelog_full_title">Change Log</string>
    <string name="changelog_show_full">more…</string>
    <string name="changelog_title">"What's New"</string>
    <string name="collage_lib_context_button_delete">Delete</string>
    <string name="collage_lib_context_button_down">Down</string>
    <string name="collage_lib_context_button_fill">Fill</string>
    <string name="collage_lib_context_button_horizontal">Horizontal</string>
    <string name="collage_lib_context_button_inside">Inside</string>
    <string name="collage_lib_context_button_left">Left</string>
    <string name="collage_lib_context_button_right">Right</string>
    <string name="collage_lib_context_button_swap">Swap</string>
    <string name="collage_lib_context_button_up">Up</string>
    <string name="collage_lib_context_button_vertical">Vertical</string>
    <string name="collage_lib_context_button_zoom_in">Zoom In</string>
    <string name="collage_lib_context_button_zoom_out">Zoom Out</string>
    <string name="collage_lib_delete_last_image_error_message">"You can't delete last image!"</string>
    <string name="collage_lib_delete_message">Do you want to delete image?</string>
    <string name="collage_lib_edit_message">Select a photo to edit.</string>
    <string name="collage_lib_footer_button_cascade">Cascade</string>
    <string name="collage_lib_footer_button_filter">Filter</string>
    <string name="collage_lib_footer_button_layout">Layout</string>
    <string name="collage_lib_footer_button_lock">Lock</string>
    <string name="collage_lib_footer_button_space">Space</string>
    <string name="collage_lib_header_cancel">Cancel</string>
    <string name="collage_lib_header_save">Save</string>
    <string name="collage_lib_loading_error_message">"Couldn't load images!"</string>
    <string name="collage_lib_loading_message">loading images!</string>
    <string name="collage_lib_max_bottom">You reached max bottom!</string>
    <string name="collage_lib_max_left">You reached max left!</string>
    <string name="collage_lib_max_right">You reached max right!</string>
    <string name="collage_lib_max_top">You reached max top!</string>
    <string name="collage_lib_maximum_zoom">You reached maximum zoom!</string>
    <string name="collage_lib_minimum_zoom">You reached minimum zoom!</string>
    <string name="collage_lib_slider_label_cascade_number">Square Count</string>
    <string name="collage_lib_slider_label_corner">Corner</string>
    <string name="collage_lib_swap_message">Select another photo to swap!</string>
    <string name="collage_lib_unlock_message">Unlock to move photos out of grids?</string>
    <string name="color_effect_brush_zoom">Zoom :</string>
    <string name="color_effect_buy_message">Buy Color Effect Pro for more features!</string>
    <string name="color_effect_buy_message_3">Color Effect Paid version provides you fully working UNDO feature and option to save multiple SESSIONS and multiple SIZE options and many more.</string>
    <string name="color_effect_buy_message_magnify">Buy full version to get Magnify Glass View which would make super easier to paint to small areas.</string>
    <string name="color_effect_go_pro">Go Pro</string>
    <string name="color_effect_keep_ads">Keep the Ads</string>
    <string name="color_effect_open">Open</string>
    <string name="color_effect_pick_color">Pick a Color</string>
    <string name="color_effect_preview">Preview</string>
    <string name="color_mode">Color Mode %d</string>
    <string name="color_splash_coach_adjustment">Adjustment</string>
    <string name="color_splash_coach_brush_size">Brush Size</string>
    <string name="color_splash_coach_change_color">Change Color</string>
    <string name="color_splash_coach_gray">Gray</string>
    <string name="color_splash_coach_help">Help</string>
    <string name="color_splash_coach_maginfy">Magnify</string>
    <string name="color_splash_coach_mask">Mask</string>
    <string name="color_splash_coach_original_color">Original Color</string>
    <string name="color_splash_coach_paint_color">Paint color</string>
    <string name="color_splash_coach_pan_zoom">Pan/Zoom</string>
    <string name="color_splash_coach_redo">Redo</string>
    <string name="color_splash_coach_save">Save/Share</string>
    <string name="color_splash_coach_undo">Undo</string>
    <string name="color_splash_full_res">Full Res</string>
    <string name="effect_lib_brightness">Brightness</string>
    <string name="effect_lib_contrast">Contrast</string>
    <string name="effect_lib_highlight">Highlight</string>
    <string name="effect_lib_light">Light</string>
    <string name="effect_lib_saturation">Saturation</string>
    <string name="effect_lib_shadows">Shadows</string>
    <string name="effect_lib_sharpen">Sharpen</string>
    <string name="effect_lib_texture">Texture</string>
    <string name="effect_lib_tilt_shift">Tilt Shift</string>
    <string name="effect_lib_tint">Tint</string>
    <string name="effect_lib_warmth">Warmth</string>
    <string name="promo_mirror_message">Download Mirror Image free!</string>
    <string name="remove_ads">Remove ads</string>
    <string name="reset">Reset</string>
    <string name="save_image_lib_Frame">Frame</string>
    <string name="save_image_lib_select_blur">Blur</string>
    <string name="save_image_lib_select_rate">Rate</string>
    <string name="save_image_menu_item_home">Home</string>
    <string name="save_image_menu_item_share">Share</string>
    <string name="save_option_more">More</string>
    <string name="saved_to_gallery">Saved to Gallery</string>
    <string name="square_lib_footer_fx">Fx</string>
    <string name="admob_id">ca-app-pub-2699830783735127/5163100897</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="menu_item_face">Facebook</string>
    <string name="menu_item_inst">Instagram</string>
    <string name="menu_item_twitter">Twitter</string>
    <string name="save_image_menu_item_face">Facebook</string>
    <string name="save_image_menu_item_inst">Instagram</string>
    <string name="save_image_menu_item_twitter">Twitter</string>
    <string name="twitter">Twitter</string>
    <string name="whatsapp">Whatsapp</string>
</resources>