<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/save_image_fb" android:id="@+id/action_face" android:orderInCategory="100" android:title="@string/save_image_menu_item_face" app:showAsAction="never" />
    <item android:icon="@drawable/save_image_instagram_follow" android:id="@+id/action_inst" android:orderInCategory="100" android:title="@string/save_image_menu_item_inst" app:showAsAction="never" />
    <item android:icon="@drawable/save_image_twitter_follow" android:id="@+id/action_twitter" android:orderInCategory="100" android:title="@string/save_image_menu_item_twitter" app:showAsAction="never" />
    <item android:icon="@drawable/save_image_home" android:id="@+id/action_save_home" android:orderInCategory="100" android:title="@string/save_image_menu_item_home" app:showAsAction="always" />
    <item android:icon="@drawable/save_image_menu_rate" android:id="@+id/action_rate" android:orderInCategory="100" android:title="@string/save_image_lib_select_rate" app:showAsAction="ifRoom" />
    <item android:id="@+id/action_share" android:orderInCategory="100" android:title="@string/save_image_menu_item_share" app:showAsAction="never" />
</menu>