<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@+id/filter_container" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ViewSwitcher android:id="@+id/viewswitcher" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <View android:background="@drawable/upshadow" android:layout_width="fill_parent" android:layout_height="4.0dip" />
                    <com.lyrebirdstudio.lyrebirdlibrary.MyViewFlipper android:gravity="bottom" android:id="@+id/control_container" android:background="@color/lib_footer_second_bg" android:layout_width="fill_parent" android:layout_height="wrap_content">
                        <android.support.v7.widget.RecyclerView android:layout_gravity="bottom" android:id="@+id/filter_RecyclerView" android:scrollbars="horizontal" android:layout_width="fill_parent" android:layout_height="@dimen/lib_view_item_image_size"
                          xmlns:android="http://schemas.android.com/apk/res/android" />
                        <android.support.v7.widget.RecyclerView android:layout_gravity="bottom" android:id="@+id/border_RecyclerView" android:scrollbars="horizontal" android:layout_width="fill_parent" android:layout_height="@dimen/lib_view_item_image_size"
                          xmlns:android="http://schemas.android.com/apk/res/android" />
                        <android.support.v7.widget.RecyclerView android:layout_gravity="bottom" android:id="@+id/overlay_RecyclerView" android:scrollbars="horizontal" android:layout_width="fill_parent" android:layout_height="@dimen/lib_view_item_image_size"
                          xmlns:android="http://schemas.android.com/apk/res/android" />
                        <android.support.v7.widget.RecyclerView android:layout_gravity="bottom" android:id="@+id/texture_RecyclerView" android:scrollbars="horizontal" android:layout_width="fill_parent" android:layout_height="@dimen/lib_view_item_image_size"
                          xmlns:android="http://schemas.android.com/apk/res/android" />
                        <LinearLayout android:layout_gravity="center" android:orientation="vertical" android:id="@+id/seekbar_container" android:layout_width="fill_parent" android:layout_height="wrap_content">
                            <TextView android:textColor="#ffffffff" android:ellipsize="end" android:id="@+id/seekbar_hint" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" />
                            <com.lyrebirdstudio.lyrebirdlibrary.SeekBarHint android:id="@+id/seek_bar_adjustment" android:padding="@dimen/lib_seek_bar_padding" android:progress="50" style="@style/effect_seek_bar_style" />
                        </LinearLayout>
                        <View android:id="@+id/lyrebird_lib_flipper_void" android:layout_width="0.0dip" android:layout_height="0.0dip" />
                    </com.lyrebirdstudio.lyrebirdlibrary.MyViewFlipper>
                </LinearLayout>
                <LinearLayout android:gravity="center_horizontal" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <ImageButton android:id="@+id/button_lib_cancel" android:src="@drawable/cancel_white" style="@style/effect_footer_imagebutton_style" />
                    <Button android:textSize="@dimen/lib_adj_label_text_size" android:id="@+id/lib_current_adjustmen_label" android:background="@color/lib_footer_button_color_normal" android:layout_height="fill_parent" android:text="@string/square_lib_footer_fx" style="@style/effect_footer_imagebutton_style" />
                    <ImageButton android:id="@+id/button_lib_ok" android:src="@drawable/ok_white" style="@style/effect_footer_imagebutton_style" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:layout_gravity="bottom" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <RelativeLayout android:id="@+id/mini_header" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="-4.1999817dip">
                    <Button android:textSize="@dimen/lib_effect_adjustment_button_text_size" android:textColor="@color/lib_adjustment_text_color" android:gravity="bottom|center" android:id="@+id/button_filter_reset" android:background="@drawable/selector_btn_reset_lib" android:paddingLeft="2.0dip" android:paddingRight="2.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="@dimen/lib_reset_button_min_width" android:minHeight="@dimen/lib_reset_button_min_height" android:text="@string/reset" android:layout_centerHorizontal="true" android:onClick="myClickHandler" />
                    <Button android:textSize="@dimen/lib_effect_adjustment_button_text_size" android:textColor="@color/lib_adjustment_text_color" android:gravity="bottom|center" android:id="@+id/button_auto_set_parameters" android:background="@drawable/selector_btn_reset_lib" android:paddingLeft="2.0dip" android:paddingRight="2.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="@dimen/lib_reset_button_min_width" android:minHeight="@dimen/lib_reset_button_min_height" android:text="@string/auto2" android:layout_alignParentRight="true" android:onClick="myClickHandler" />
                </RelativeLayout>
                <HorizontalScrollView android:layout_gravity="bottom" android:id="@+id/fx_footer" android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="wrap_content" android:measureAllChildren="false" android:fillViewport="true">
                    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                        <View android:background="@drawable/upshadow" android:layout_width="fill_parent" android:layout_height="4.0dip" />
                        <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
                            <Button android:id="@+id/button_fx" android:text="@string/square_lib_footer_fx" android:drawableTop="@drawable/lib_effect" style="@style/effect_footer_imagebutton_style" />
                            <Button android:id="@+id/button_frame" android:text="@string/save_image_lib_Frame" android:drawableTop="@drawable/lib_frame" style="@style/effect_footer_imagebutton_style" />
                            <Button android:id="@+id/button_light" android:text="@string/effect_lib_light" android:drawableTop="@drawable/lib_light" style="@style/effect_footer_imagebutton_style" />
                            <Button android:id="@+id/button_texture" android:text="@string/effect_lib_texture" android:drawableTop="@drawable/lib_texture" style="@style/effect_footer_imagebutton_style" />
                            <Button android:id="@+id/button_brightness" android:text="@string/effect_lib_brightness" android:drawableTop="@drawable/lib_brightness" style="@style/effect_footer_imagebutton_style" />
                            <Button android:id="@+id/button_temperature" android:text="@string/effect_lib_warmth" android:drawableTop="@drawable/lib_warmth" style="@style/effect_footer_imagebutton_style" />
                            <Button android:id="@+id/button_contrast" android:text="@string/effect_lib_contrast" android:drawableTop="@drawable/lib_contrast" style="@style/effect_footer_imagebutton_style" />
                            <Button android:id="@+id/button_saturation" android:text="@string/effect_lib_saturation" android:drawableTop="@drawable/lib_saturation" style="@style/effect_footer_imagebutton_style" />
                            <Button android:id="@+id/button_tint" android:text="@string/effect_lib_tint" android:drawableTop="@drawable/lib_tint" style="@style/effect_footer_imagebutton_style" />
                            <Button android:id="@+id/button_sharpen" android:text="@string/effect_lib_sharpen" android:drawableTop="@drawable/lib_sharpness" style="@style/effect_footer_imagebutton_style" />
                            <Button android:id="@+id/button_blur" android:text="@string/save_image_lib_select_blur" android:drawableTop="@drawable/lib_blur" style="@style/effect_footer_imagebutton_style" />
                            <Button android:id="@+id/button_highlights" android:text="@string/effect_lib_highlight" android:drawableTop="@drawable/lib_highlight" style="@style/effect_footer_imagebutton_style" />
                            <Button android:id="@+id/button_shadows" android:text="@string/effect_lib_shadows" android:drawableTop="@drawable/lib_shadows" style="@style/effect_footer_imagebutton_style" />
                            <Button android:id="@+id/button_tilt_shift" android:text="@string/effect_lib_tilt_shift" android:drawableTop="@drawable/lib_tilt_shift" style="@style/effect_footer_imagebutton_style" />
                        </LinearLayout>
                    </LinearLayout>
                </HorizontalScrollView>
            </LinearLayout>
        </ViewSwitcher>
    </LinearLayout>
    <FrameLayout android:id="@+id/lyrebird_lib_tilt_fragment_container" android:layout_width="fill_parent" android:layout_height="wrap_content" />
</RelativeLayout>