<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/save_image_main_layout" android:background="#ff2f2f2f" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <android.support.v7.widget.Toolbar android:id="@+id/my_awesome_toolbar" android:background="?colorPrimary" android:layout_width="fill_parent" android:layout_height="@dimen/abc_action_bar_default_height_material" android:minHeight="@dimen/abc_action_bar_default_height_material" android:layout_alignParentTop="true" />
    <com.google.android.gms.ads.AdView android:id="@+id/save_image_ad_id" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@+id/my_awesome_toolbar" ads:adSize="SMART_BANNER" ads:adUnitId="@string/admob_id" xmlns:ads="http://schemas.android.com/apk/res-auto" />
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@+id/share_container" android:padding="@dimen/save_image_color_menu_padding" android:paddingTop="1.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@+id/save_image_ad_id">
        <TextView android:textSize="16.0sp" android:textColor="@color/save_image_main_circle_text_color" android:id="@+id/saved_message" android:padding="2.0dip" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/saved_to_gallery" android:drawableRight="@drawable/save_image_green_tick" android:drawablePadding="5.0dip" android:onClick="myClickHandler" />
        <HorizontalScrollView android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="3.0">
            <LinearLayout android:gravity="center" android:orientation="horizontal" android:padding="5.0dip" android:paddingLeft="0.0dip" android:paddingTop="3.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:baselineAligned="false">
                <LinearLayout style="@style/save_image_circle_button_container_style">
                    <com.lyrebirdstudio.promodialog.SquareImageButton android:id="@+id/share_image_instagram" android:background="@drawable/state_save_image_red" android:padding="@dimen/save_image_circle_image_view_padding" android:layout_width="@dimen/save_image_circle_item_size" android:layout_height="@dimen/save_image_circle_item_size" android:src="@drawable/save_image_instagram_follow" android:layout_weight="6.0" android:onClick="myClickHandler" />
                    <TextView android:textSize="@dimen/save_image_circle_text_size" android:textColor="@color/save_image_main_circle_text_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/save_image_circle_text_margin_top" android:text="@string/instagram" android:layout_weight="1.0" />
                </LinearLayout>
                <LinearLayout style="@style/save_image_circle_button_container_style">
                    <com.lyrebirdstudio.promodialog.SquareImageButton android:id="@+id/share_image_twitter" android:background="@drawable/state_save_image_purple" android:padding="@dimen/save_image_circle_image_view_padding" android:layout_width="@dimen/save_image_circle_item_size" android:layout_height="@dimen/save_image_circle_item_size" android:src="@drawable/save_image_twitter_follow" android:layout_weight="6.0" android:onClick="myClickHandler" />
                    <TextView android:textSize="@dimen/save_image_circle_text_size" android:textColor="@color/save_image_main_circle_text_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/save_image_circle_text_margin_top" android:text="@string/twitter" android:layout_weight="1.0" />
                </LinearLayout>
                <LinearLayout style="@style/save_image_circle_button_container_style">
                    <com.lyrebirdstudio.promodialog.SquareImageButton android:id="@+id/share_image_whatsapp" android:background="@drawable/state_save_image_green" android:padding="@dimen/save_image_circle_image_view_padding" android:layout_width="@dimen/save_image_circle_item_size" android:layout_height="@dimen/save_image_circle_item_size" android:src="@drawable/save_image_whatsapp" android:layout_weight="6.0" android:onClick="myClickHandler" />
                    <TextView android:textSize="@dimen/save_image_circle_text_size" android:textColor="@color/save_image_main_circle_text_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/save_image_circle_text_margin_top" android:text="@string/whatsapp" android:layout_weight="1.0" />
                </LinearLayout>
                <LinearLayout style="@style/save_image_circle_button_container_style">
                    <com.lyrebirdstudio.promodialog.SquareImageButton android:id="@+id/share_image_facebook" android:background="@drawable/state_save_image_blue" android:padding="@dimen/save_image_circle_image_view_padding" android:layout_width="@dimen/save_image_circle_item_size" android:layout_height="@dimen/save_image_circle_item_size" android:src="@drawable/save_image_fb" android:layout_weight="6.0" android:onClick="myClickHandler" />
                    <TextView android:textSize="@dimen/save_image_circle_text_size" android:textColor="@color/save_image_main_circle_text_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/save_image_circle_text_margin_top" android:text="@string/facebook" android:layout_weight="1.0" />
                </LinearLayout>
                <LinearLayout style="@style/save_image_circle_button_container_style">
                    <com.lyrebirdstudio.promodialog.SquareImageButton android:id="@+id/share_image_more" android:background="@drawable/state_save_image_yellow" android:padding="@dimen/save_image_circle_image_view_padding" android:layout_width="@dimen/save_image_circle_item_size" android:layout_height="@dimen/save_image_circle_item_size" android:src="@drawable/save_image_more" android:layout_weight="6.0" android:onClick="myClickHandler" />
                    <TextView android:textSize="@dimen/save_image_circle_text_size" android:textColor="@color/save_image_main_circle_text_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/save_image_circle_text_margin_top" android:text="@string/save_option_more" android:layout_weight="1.0" />
                </LinearLayout>
            </LinearLayout>
        </HorizontalScrollView>
    </LinearLayout>
    <View android:id="@+id/save_image_divider" android:background="#ffe3e3e3" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="1.0dip" android:layout_below="@+id/share_container" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@+id/share_container">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@+id/save_image_native_advanced_ad_admob" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            <android.support.v7.widget.RecyclerView android:id="@+id/recyclerview_promo_square" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="5.0dip"
              xmlns:android="http://schemas.android.com/apk/res/android" />
        </LinearLayout>
    </ScrollView>
    <TextView android:textSize="20.0sp" android:textColor="@android:color/white" android:gravity="center" android:id="@+id/mirror_promo_text" android:background="@drawable/selector_mirror_promo_text" android:visibility="invisible" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/promo_mirror_message" android:shadowColor="#ff000000" android:shadowDx="1.5" android:shadowDy="1.3" android:shadowRadius="1.6" android:drawableLeft="@drawable/icon_mirror" android:onClick="myClickHandler" />
</RelativeLayout>